<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            android:padding="@dimen/middle_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/settings"
            android:textColor="@color/black_header"
            android:textSize="@dimen/text_size"
            android:textFontWeight="500"

            android:paddingStart="12dp"
            android:paddingBottom="12dp"
            android:paddingTop="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/header_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:text="@string/night_mode"
            android:textColor="@color/black_main"
            android:textSize="@dimen/settings_text_size"
            android:textFontWeight="400"

            android:paddingStart="@dimen/middle_margin"
            android:paddingVertical="@dimen/settings_text_vertical_padding" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="18dp"
            android:layout_gravity="center"

            app:tint="@color/grey" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:text="@string/share_app"
            android:textColor="@color/black_main"
            android:textSize="@dimen/settings_text_size"
            android:textFontWeight="400"

            android:paddingStart="@dimen/middle_margin"
            android:paddingVertical="@dimen/settings_text_vertical_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon"

            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginVertical="@dimen/icon_margin_vertical"

            app:tint="@color/grey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:text="@string/support"
            android:textColor="@color/black_main"
            android:textSize="@dimen/settings_text_size"
            android:textFontWeight="400"

            android:paddingStart="@dimen/middle_margin"
            android:paddingVertical="@dimen/settings_text_vertical_padding" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support_icon"

            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginVertical="@dimen/icon_margin_vertical"

            app:tint="@color/grey"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:text="@string/user_agreement"
            android:textColor="@color/black_main"
            android:textSize="@dimen/settings_text_size"
            android:textFontWeight="400"

            android:paddingStart="@dimen/middle_margin"
            android:paddingVertical="@dimen/settings_text_vertical_padding"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward_icon"

            android:layout_marginEnd="@dimen/icon_margin_end"
            android:layout_marginVertical="@dimen/icon_margin_vertical"

            app:tint="@color/grey" />

    </LinearLayout>

</LinearLayout>